force-app/main/default/objects/Daily_Sale__c/Daily_Sale__c.object-meta.xml
<CustomObject>
    <label>Daily Sale</label>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>Daily Sale Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>