force-app/main/default/objects/Daily_Sale__c/fields/Audited_Amount__c.field-meta.xml
<CustomField>
    <fullName>Audited_Amount__c</fullName>
    <description>Maps to MRI: AUDAMOUNT</description>
    <label>Audited Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>