force-app/main/default/objects/Daily_Sale__c/fields/Auxiliar_Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Auxiliar_Variance_Amount__c</fullName>
    <formula>IF(Variance_Amount__c == NULL,NULL,ABS( Variance_Amount__c ))</formula>
    <label>Auxiliar Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>