force-app/main/default/objects/Daily_Sale__c/fields/Average_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Transaction_Value__c</fullName>
    <formula>Brand_Reported_Amount__c /  Number_of_Transactions__c</formula>
    <label>Average Transaction Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>