force-app/main/default/objects/Daily_Sale__c/fields/BP_Total_Net_Full_Price_Sales__c.field-meta.xml
<CustomField>
    <fullName>BP_Total_Net_Full_Price_Sales__c</fullName>
    <label>Total Net Digital Sales (FP)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>