force-app/main/default/objects/Daily_Sale__c/fields/BP_Validation_Override__c.field-meta.xml
<CustomField>
    <fullName>BP_Validation_Override__c</fullName>
    <formula>Certification_Batch__r.BP_Validation_Context_Override__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Validation Override</label>
    <type>Checkbox</type>
</CustomField>