force-app/main/default/objects/Daily_Sale__c/fields/Brand_Audited_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Brand_Audited_Date_Time__c</fullName>
    <label>Brand Audited Date/Time</label>
    <type>DateTime</type>
</CustomField>