force-app/main/default/objects/Daily_Sale__c/fields/Brand_Audited_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Audited_Name__c</fullName>
    <label>Brand Audited Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>