force-app/main/default/objects/Daily_Sale__c/fields/Brand_Certified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Brand_Certified_Date_Time__c</fullName>
    <formula>Certification_Batch__r.Certified_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Certified Date Time</label>
    <type>DateTime</type>
</CustomField>