force-app/main/default/objects/Daily_Sale__c/fields/Brand_Certified_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Certified_Name__c</fullName>
    <formula>Certification_Batch__r.Certified_by__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Certified Name</label>
    <type>Text</type>
</CustomField>