force-app/main/default/objects/Daily_Sale__c/fields/Brand_Confirmed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Brand_Confirmed_Date_Time__c</fullName>
    <description>Maps to MRI: BRAND_CON_DATETIME</description>
    <label>Brand Confirmed Date/Time</label>
    <type>DateTime</type>
</CustomField>