force-app/main/default/objects/Daily_Sale__c/fields/Brand_Confirmed_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Confirmed_Name__c</fullName>
    <description>Maps to MRI: BRAND_CON_USERNAME</description>
    <label>Brand Confirmed Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>