force-app/main/default/objects/Daily_Sale__c/fields/Brand_Created_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Created_by_Name__c</fullName>
    <description>Maps to MRI: BRAND_CR_USERNAME</description>
    <label>Brand Created by Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>