force-app/main/default/objects/Daily_Sale__c/fields/Brand_Event_Sales__c.field-meta.xml
<CustomField>
    <fullName>Brand_Event_Sales__c</fullName>
    <inlineHelpText>Enter the amount of total sales, if there were no sales for the day enter 0.</inlineHelpText>
    <label>Brand Event Sales</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>