force-app/main/default/objects/Daily_Sale__c/fields/Brand_Event_Units__c.field-meta.xml
<CustomField>
    <fullName>Brand_Event_Units__c</fullName>
    <inlineHelpText>Enter the number of units sold, if there were no units sold for the day enter 0.</inlineHelpText>
    <label>Brand Event Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>