force-app/main/default/objects/Daily_Sale__c/fields/Brand_Event_VP_Only_DS_Active__c.field-meta.xml
<CustomField>
    <fullName>Brand_Event_VP_Only_DS_Active__c</fullName>
    <formula>Store__r.Brand_Event_VP_Only_Active__c</formula>
    <inlineHelpText>Brand Event Village Presence ONLY. Net Sales recorded will also be taken as Brand Event sales. Events of less than two months duration, in a unit or Village private space. Events by invitation only and/or open to the public, either physical or virtual</inlineHelpText>
    <label>Brand Event VP Only DS Active</label>
    <type>Checkbox</type>
</CustomField>