force-app/main/default/objects/Daily_Sale__c/fields/Brand_Note__c.field-meta.xml
<CustomField>
    <fullName>Brand_Note__c</fullName>
    <inlineHelpText>If Ignore Validations selected, please confirm why, or add any other notes you believe are required</inlineHelpText>
    <label>Brand Note</label>
    <type>TextArea</type>
</CustomField>