force-app/main/default/objects/Daily_Sale__c/fields/Brand_Private_Appointment_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Brand_Private_Appointment_Transactions__c</fullName>
    <inlineHelpText>Enter the amount of Brand Private Appointment transactions, if there were no transactions for the day enter 0.</inlineHelpText>
    <label>Brand Private Appointment Transactions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>