force-app/main/default/objects/Daily_Sale__c/fields/Brand_Remote_Sales__c.field-meta.xml
<CustomField>
    <fullName>Brand_Remote_Sales__c</fullName>
    <inlineHelpText>Enter the amount of Brand Virtual Shopping sales, if there were no sales for the day enter 0.</inlineHelpText>
    <label>Brand Virtual Shopping Sales</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>