force-app/main/default/objects/Daily_Sale__c/fields/Brand_Remote_Sales_Active__c.field-meta.xml
<CustomField>
    <fullName>Brand_Remote_Sales_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this check box is selected the Daily Sales record will include Brand Virtual Shopping Sales, Transactions and Unit data fields.  This is where Brands are selling products to the guest remotely.</inlineHelpText>
    <label>Brand Virtual Shopping Active</label>
    <type>Checkbox</type>
</CustomField>