force-app/main/default/objects/Daily_Sale__c/fields/Brand_Remote_Units__c.field-meta.xml
<CustomField>
    <fullName>Brand_Remote_Units__c</fullName>
    <inlineHelpText>Enter the amount of Brand Virtual Shopping units, if there were no units sold for the day enter 0.</inlineHelpText>
    <label>Brand Virtual Shopping Units</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>