force-app/main/default/objects/Daily_Sale__c/fields/Brand_Reported_Amount__c.field-meta.xml
<CustomField>
    <fullName>Brand_Reported_Amount__c</fullName>
    <description>This field is looks at in the INT_Reported_Amount formula field and passed through to MRI via that field if the OVERRIDE RPT AMOUNT field is NULL</description>
    <inlineHelpText>This is the Total Net Sales and the total Net Value of Discounts for the day added together.</inlineHelpText>
    <label>Brand Reported Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>