force-app/main/default/objects/Daily_Sale__c/fields/Brand_Status__c.field-meta.xml
<CustomField>
    <fullName>Brand_Status__c</fullName>
    <description>Maps to MRI: BRANDCONF</description>
    <inlineHelpText>Please set to Confirmed when all figures have been entered and verified. This will submit the record to VR to be processed</inlineHelpText>
    <label>Brand Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Confirmed</fullName>
                <default>true</default>
                <label>Not Confirmed</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>