force-app/main/default/objects/Daily_Sale__c/fields/Certification_Batch__c.field-meta.xml
<CustomField>
    <fullName>Certification_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification Batch</label>
    <referenceTo>Daily_Sales_Certification_Batch__c</referenceTo>
    <relationshipLabel>Daily Sales</relationshipLabel>
    <relationshipName>Daily_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>