force-app/main/default/objects/Daily_Sale__c/fields/Certification_Comment__c.field-meta.xml
<CustomField>
    <fullName>Certification_Comment__c</fullName>
    <inlineHelpText>Any Sales Certification comments for this date added by the Brand Head Office user</inlineHelpText>
    <label>Certification Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>