force-app/main/default/objects/Daily_Sale__c/fields/Certification_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Period_Type__c</fullName>
    <description>MRI: Certification batch Period Type related to DailySales record</description>
    <formula>Certification_Batch__r.Certification_Period_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CertBatchPeriodType</label>
    <type>Text</type>
</CustomField>