force-app/main/default/objects/Daily_Sale__c/fields/Certified_Amount__c.field-meta.xml
<CustomField>
    <fullName>Certified_Amount__c</fullName>
    <description>Maps to MRI: CERAMOUNT</description>
    <inlineHelpText>The total Certified Sales Amount for this date that is submitted by the Brand Head Office.  Once Approved by VR Finance this will integrate across to MRI.</inlineHelpText>
    <label>Certified Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>