force-app/main/default/objects/Daily_Sale__c/fields/Certified_Amount_NetTotal__c.field-meta.xml
<CustomField>
    <fullName>Certified_Amount_NetTotal__c</fullName>
    <description>This is the field that should be integrated with MRI. The main goal is to avoid that this formula field never is blank. However it is utilized on the calculation of Certified Amount.</description>
    <formula>IF(ISBLANK(Certified_Amount_NetTotal_Input__c),IF(NOT(ISBLANK(Total_NET_SALES__c)),Total_NET_SALES__c ,0),Certified_Amount_NetTotal_Input__c)</formula>
    <label>Certified Amount NetTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>