force-app/main/default/objects/Daily_Sale__c/fields/Certified_Amount_NetTotal_Input__c.field-meta.xml
<CustomField>
    <fullName>Certified_Amount_NetTotal_Input__c</fullName>
    <description>This field appear on the Brand Portal front-end view (Certification table). It will be editable there and do not integrate with MRI.</description>
    <inlineHelpText>The total Certified Net Sales Amount for this date that is submitted by the Brand Head Office</inlineHelpText>
    <label>Certified Amount NetTotal Input</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>