force-app/main/default/objects/Daily_Sale__c/fields/Confirmation_timeliness__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_timeliness__c</fullName>
    <formula>if ( Brand_Confirmed_Date_Time__c - CreatedDate      &lt; 0.5, &quot;Same Day&quot;, 

IF( Brand_Confirmed_Date_Time__c - CreatedDate &lt; 0.917  ,&quot;Following Morning&quot;, &quot;Later&quot;))</formula>
    <label>Confirmation timeliness</label>
    <type>Text</type>
</CustomField>