force-app/main/default/objects/Daily_Sale__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <formula>Number_of_Transactions__c /  Footfall__c</formula>
    <inlineHelpText>Ratio of transactions compared to store footfall</inlineHelpText>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>