force-app/main/default/objects/Daily_Sale__c/fields/Covers__c.field-meta.xml
<CustomField>
    <fullName>Covers__c</fullName>
    <label>Covers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>