force-app/main/default/objects/Daily_Sale__c/fields/Current_Season_Bestsellers_Active__c.field-meta.xml
<CustomField>
    <fullName>Current_Season_Bestsellers_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this check box is selected the Daily Sales record will include CSB Sales and Unit data fields.  This is full price product from current season collection.</inlineHelpText>
    <label>Current Season Bestsellers Active</label>
    <type>Checkbox</type>
</CustomField>