force-app/main/default/objects/Daily_Sale__c/fields/Date_First_Submitted_to_MRI__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Submitted_to_MRI__c</fullName>
    <description>Maps to MRI: BRAND_CR_DATETIME</description>
    <label>Date First Submitted to MRI</label>
    <type>DateTime</type>
</CustomField>