force-app/main/default/objects/Daily_Sale__c/fields/Date_Last_Sent_to_MRI__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Sent_to_MRI__c</fullName>
    <description>This is populated and used as a trigger to send message to MRI</description>
    <label>Date Last Sent to MRI</label>
    <type>DateTime</type>
</CustomField>