force-app/main/default/objects/Daily_Sale__c/fields/Discount_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Discount_Ratio__c</fullName>
    <formula>NET_Value_of_Discounts__c /  Total_NET_SALES__c</formula>
    <label>Discount Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>