force-app/main/default/objects/Daily_Sale__c/fields/Discretionary_Discount_Sales__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Discount_Sales__c</fullName>
    <inlineHelpText>Enter the amount of Special Curated Selection sales, if there were no sales for the day enter 0.  This is product recently discontinued at full price but not yet available at off-price. Product for TBVSC at a 10% discount off RRP.</inlineHelpText>
    <label>Special Curated Selection Sales</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>