force-app/main/default/objects/Daily_Sale__c/fields/Discretionary_Discount_Units__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Discount_Units__c</fullName>
    <inlineHelpText>Enter the number of Special Curated Selection units, if there were not units sold for the day enter 0.  This is product recently discontinued at full price but not yet available at off-price. Product for TBVSC at a 10% discount off RRP.</inlineHelpText>
    <label>Special Curated Selection Units</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>