force-app/main/default/objects/Daily_Sale__c/fields/Footfall__c.field-meta.xml
<CustomField>
    <fullName>Footfall__c</fullName>
    <inlineHelpText>Enter the figure from the footfall counter.  
Please leave blank if you do not have a footfall counter or do not yet know the value.</inlineHelpText>
    <label>Footfall</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>