force-app/main/default/objects/Daily_Sale__c/fields/Full_Price_Sales__c.field-meta.xml
<CustomField>
    <fullName>Full_Price_Sales__c</fullName>
    <inlineHelpText>Enter the amount of Current Season Bestseller sales.  This is full price product from current season collection.  If there were no full price sales for this day enter 0.</inlineHelpText>
    <label>Current Season Bestsellers Sales</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>