force-app/main/default/objects/Daily_Sale__c/fields/Full_Price_Units__c.field-meta.xml
<CustomField>
    <fullName>Full_Price_Units__c</fullName>
    <inlineHelpText>Enter the number of Current Season Bestseller units.  This is full price product from current season collection.  If there were no full price units sold for this day enter 0.</inlineHelpText>
    <label>Current Season Bestsellers Units</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>