force-app/main/default/objects/Daily_Sale__c/fields/Grace_Period_Days_Applied__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Days_Applied__c</fullName>
    <description>The &apos;Reported Sales Grace Period&apos; value used to calculate the date.</description>
    <inlineHelpText>The number of Grace Period days that applied for this Daily Sales record</inlineHelpText>
    <label>Grace Period Days Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>