force-app/main/default/objects/Daily_Sale__c/fields/Grace_Period_Expired_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Expired_On_Date__c</fullName>
    <description>Daily Sales Calculated Expiry Date</description>
    <inlineHelpText>The date when the Grace Period expired for this Daily Sales record</inlineHelpText>
    <label>Grace Period Expired On Date</label>
    <type>Date</type>
</CustomField>