force-app/main/default/objects/Daily_Sale__c/fields/GROSS_Value_of_Discounts__c.field-meta.xml
<CustomField>
    <fullName>GROSS_Value_of_Discounts__c</fullName>
    <inlineHelpText>Gross value of discounts for VIP Day Cards and Staff Privilege Cards</inlineHelpText>
    <label>GROSS Value of Discounts</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>