force-app/main/default/objects/Daily_Sale__c/fields/Ignore_Validations__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If when you try and save this record you get validation errors but believe the data to be correct, please tick this checkbox and complete the notes field with the reason.</inlineHelpText>
    <label>Ignore Validations</label>
    <type>Checkbox</type>
</CustomField>