force-app/main/default/objects/Daily_Sale__c/fields/INT_Reported_Amount__c.field-meta.xml
<CustomField>
    <fullName>INT_Reported_Amount__c</fullName>
    <description>Mapped to MRI: RPTAMOUNT</description>
    <formula>IF(  VR_Override_Reported_Amount__c =0 ,  Brand_Reported_Amount__c  , VR_Override_Reported_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INT Reported Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>