force-app/main/default/objects/Daily_Sale__c/fields/Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Message__c</fullName>
    <label>Integration Message</label>
    <type>TextArea</type>
</CustomField>