force-app/main/default/objects/Daily_Sale__c/fields/Is_Brand_Event_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Brand_Event_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Brand events of less than two months duration, in a unit or Village private space.  Sales recorded as a subset of an existing Village Presence Lease. Events by invitation only and/or open to the public, either physical or virtual.</inlineHelpText>
    <label>Brand Event As Subset Active</label>
    <type>Checkbox</type>
</CustomField>