force-app/main/default/objects/Daily_Sale__c/fields/Is_Pop_Up_Boutique_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Pop_Up_Boutique_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Short-term boutiques of two to twenty-four months’ duration.  Sales recorded as a subset of an existing Village Presence Lease.</inlineHelpText>
    <label>Pop-Up Boutique As Subset Active</label>
    <type>Checkbox</type>
</CustomField>