force-app/main/default/objects/Daily_Sale__c/fields/Last_Modified_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_by_Name__c</fullName>
    <description>Maps to MRI: BRAND_MOD_USERNAME</description>
    <formula>LastModifiedBy.FirstName  &amp; &quot; &quot; &amp;  LastModifiedBy.LastName</formula>
    <label>Last Modified by Name</label>
    <type>Text</type>
</CustomField>