force-app/main/default/objects/Daily_Sale__c/fields/Last_Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Time__c</fullName>
    <inlineHelpText>Shown in local time zone of user who last saved</inlineHelpText>
    <label>Last Modified Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>