force-app/main/default/objects/Daily_Sale__c/fields/MRI_Phase_Id__c.field-meta.xml
<CustomField>
    <fullName>MRI_Phase_Id__c</fullName>
    <description>The Phase Id returned by MRI at the time the Daily Sale record was created.</description>
    <inlineHelpText>The Phase Id returned by MRI at the time the Daily Sale record was created.</inlineHelpText>
    <label>MRI_Phase_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>