force-app/main/default/objects/Daily_Sale__c/fields/MRI_Report_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>MRI_Report_Type_ID__c</fullName>
    <label>MRI Report Type ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reported</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
                <isActive>false</isActive>
                <label>Certified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>