force-app/main/default/objects/Daily_Sale__c/fields/MRI_Suite_Id__c.field-meta.xml
<CustomField>
    <fullName>MRI_Suite_Id__c</fullName>
    <label>Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>