force-app/main/default/objects/Daily_Sale__c/fields/MRI_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>MRI_Unit_Id__c</fullName>
    <description>Concatenation of the Phase Id and Suite Id returned by MRI during the Daily Sale record creation</description>
    <formula>MRI_Phase_Id__c  &amp;  MRI_Suite_Id__c</formula>
    <inlineHelpText>Concatenation of the Phase Id and Suite Id returned by MRI during the Daily Sale record creation</inlineHelpText>
    <label>MRI_Unit_Id</label>
    <type>Text</type>
</CustomField>