force-app/main/default/objects/Daily_Sale__c/fields/NET_Value_of_Discounts__c.field-meta.xml
<CustomField>
    <fullName>NET_Value_of_Discounts__c</fullName>
    <inlineHelpText>NET Value of Discounts</inlineHelpText>
    <label>NET Value of Discounts</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>