force-app/main/default/objects/Daily_Sale__c/fields/Non_VAT_able_Sales__c.field-meta.xml
<CustomField>
    <fullName>Non_VAT_able_Sales__c</fullName>
    <inlineHelpText>e.g. Childrens clothes, Zero-rated Food</inlineHelpText>
    <label>Non VAT-able Sales</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>