force-app/main/default/objects/Daily_Sale__c/fields/Number_of_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Transactions__c</fullName>
    <description>Maps to MRI: TRANSACTIONS</description>
    <inlineHelpText>Enter the Number of Transactions</inlineHelpText>
    <label>Number of Transactions</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>