force-app/main/default/objects/Daily_Sale__c/fields/Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_End_Date__c</fullName>
    <description>MRI: Daily Sales Certification Batch Start Period</description>
    <formula>Certification_Batch__r.Period_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CertBatchEndDate</label>
    <type>Date</type>
</CustomField>