force-app/main/default/objects/Daily_Sale__c/fields/Period_Name__c.field-meta.xml
<CustomField>
    <fullName>Period_Name__c</fullName>
    <description>MRI: Daily Sales Certification Batch Period Name</description>
    <formula>Certification_Batch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CertBatchPeriodName</label>
    <type>Text</type>
</CustomField>