force-app/main/default/objects/Daily_Sale__c/fields/Pop_up_Boutique_Footfall__c.field-meta.xml
<CustomField>
    <fullName>Pop_up_Boutique_Footfall__c</fullName>
    <inlineHelpText>Enter the amount of guest footfall, if there was no footfall for the day enter 0.</inlineHelpText>
    <label>Pop-up Boutique Footfall</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>