force-app/main/default/objects/Daily_Sale__c/fields/Pop_up_Boutique_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Pop_up_Boutique_Transactions__c</fullName>
    <inlineHelpText>Enter the number of transactions, if there were no transactions for the day enter 0.</inlineHelpText>
    <label>Pop-up Boutique Transactions</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>