force-app/main/default/objects/Daily_Sale__c/fields/Pop_up_Boutique_Units__c.field-meta.xml
<CustomField>
    <fullName>Pop_up_Boutique_Units__c</fullName>
    <inlineHelpText>Enter the number of units sold, if there were no units sold for the day enter 0.</inlineHelpText>
    <label>Pop-up Boutique Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>