force-app/main/default/objects/Daily_Sale__c/fields/Pop_Up_VP_Only_DS_Active__c.field-meta.xml
<CustomField>
    <fullName>Pop_Up_VP_Only_DS_Active__c</fullName>
    <formula>Store__r.Pop_Up_VP_Only_Active__c</formula>
    <inlineHelpText>Pop-Up Village Presence ONLY. Net Sales recorded will also be taken as Pop-Up sales. Short-term boutiques of two to twenty-four months’ duration</inlineHelpText>
    <label>Pop Up VP Only DS Active</label>
    <type>Checkbox</type>
</CustomField>