force-app/main/default/objects/Daily_Sale__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <description>Maps to MRI: RPTYID</description>
    <formula>&quot;RPT&quot;</formula>
    <label>Report Type</label>
    <type>Text</type>
</CustomField>